--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-amqp==2.3.2
+amqp==2.4.2
 Babel==2.6.0
-billiard==3.5.0.5
-celery==4.2.1
+billiard==3.6.0.0
+celery==4.3.0
 Click==7.0
 Flask==1.0.2
-flower==0.9.2
-gunicorn==19.9.0
+flower==0.9.3
 itsdangerous==1.1.0
-Jinja2==2.10
-kombu==4.2.2.post1
-MarkupSafe==1.1.0
-pytz==2018.9
-redis==3.0.1
+Jinja2==2.10.1
+kombu==4.5.0
+MarkupSafe==1.1.1
+pytz==2019.1
+redis==3.2.1
+six==1.12.0
 tornado==5.1.1
-vine==1.2.0
-Werkzeug==0.14.1
+vine==1.3.0
+Werkzeug==0.15.2
