Fix build issue resulting from Kombu

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ Flask==1.0.2
 flower==0.9.3
 gunicorn==19.9.0
 redis==3.2.1
+
+# NOTE: Kombu 4.6.5 results in a build failure. Bumping down to 4.6.4
+#       See this github issue: https://github.com/celery/kombu/issues/1063
+kombu==4.6.4
