--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ python-multipart==0.0.5
 starlette==0.12.0
 uvicorn==0.7.1
 ujson==2.0.1
+torch==1.4.0
+torchvision==0.5.0
 
 # NOTE: Kombu 4.6.5 results in a build failure. Bumping down to 4.6.4
 #       See this github issue: https://github.com/celery/kombu/issues/1063
