--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.1.0
 async-timeout==4.0.2
 billiard==3.6.4.0
+cached-property==1.5.2
 celery==5.2.6
 click==8.1.2
 click-didyoumean==0.3.0
@@ -24,6 +25,7 @@ pytz==2022.1
 redis==4.2.2
 six==1.16.0
 tornado==6.1
+typing-extensions==4.1.1
 vine==5.0.0
 wcwidth==0.2.5
 Werkzeug==2.1.1
