Note why we choose plan in blueprint comment

--- a/render.yaml
+++ b/render.yaml
@@ -39,6 +39,6 @@ services:
   - type: redis
     name: celery-redis
     region: ohio
-    plan: starter 
+    plan: starter # we choose a plan with persistence to ensure tasks are not lost upon restart
     maxmemoryPolicy: noeviction # recommended policy for queues
     ipAllowList: [] # only allow internal connections
