--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: worker
-    name: queue
+    name: zenn-worker
     region: ohio
     env: python
     buildCommand: "pip install -r requirements.txt"
@@ -9,11 +9,11 @@ services:
     envVars:
       - key: CELERY_BROKER_URL
         fromService:
-          name: celery-redis
+          name: zenn-queue-redis
           type: redis
           property: connectionString
   - type: web
-    name: app
+    name: zenn-queue
     region: ohio
     env: python
     buildCommand: "pip install -r requirements.txt"
@@ -26,7 +26,7 @@ services:
           type: redis
           property: connectionString
   - type: web
-    name: flower
+    name: zenn-queue-ui
     region: ohio
     plan: free
     env: python
@@ -40,7 +40,7 @@ services:
           name: celery-redis
           property: connectionString
   - type: redis
-    name: celery-redis
+    name: zenn-queue-redis
     region: ohio
     plan: starter # we choose a plan with persistence to ensure tasks are not lost upon restart
     maxmemoryPolicy: noeviction # recommended policy for queues
