--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,12 @@ packaging==21.3
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 pyparsing==3.0.8
+python-dotenv==0.21.1
 pytz==2022.1
 redis==4.2.2
 six==1.16.0
 tornado==6.1
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 vine==5.0.0
 wcwidth==0.2.5
 Werkzeug==2.1.1
