--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
-    autoDeploy: false
+    autoDeploy: true
     envVars:
       - key: CELERY_BROKER_URL
         fromService:
@@ -32,7 +32,7 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "celery flower --app tasks --loglevel info"
-    autoDeploy: false
+    autoDeploy: true
     envVars:
       - key: CELERY_BROKER_URL
         fromService:
